navv blur fix on safari

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -164,6 +164,7 @@ nav {
 	position: fixed;
 	top: 0;
 	left: 0;
+	-webkit-backdrop-filter: blur(8px);
 	backdrop-filter: blur(8px);
 }
 nav > a {
@@ -244,7 +245,7 @@ nav > .logo {
 	}
 
 	/* Navigation  */
-	nav {
+	/* nav {
 		background: rgba(0, 0, 0, .5);
 		z-index: 100;
 		width: 100%;
@@ -269,7 +270,7 @@ nav > .logo {
 		color: red;
 		padding: 16px;
 		font-family: "Unbounded";
-	}
+	} */
 }
 
 
